# oak

./: .bazelrc  Cargo.toml  Dockerfile  WORKSPACE
ml_transparency_demo/: Cargo.toml
ml_transparency_demo/src/: main.rs
ml_transparency_signer/: Cargo.toml
ml_transparency_signer/src/: main.rs
oak/client/: BUILD  application_client.h
oak/common/: BUILD  authority.cc  authority.h
oak/server/: BUILD  oak_grpc_node.cc
oak/server/asylo/: BUILD  asylo_oak_manager.cc
oak_attestation_verification/src/: lib.rs  verifier.rs
oak_crypto/src/: verifier.rs
oak_functions/examples/: Cargo.toml
oak_functions/examples/abitest/: example.toml
oak_functions/examples/abitest/client/: Cargo.toml
oak_functions/examples/abitest/client/src/: main.rs
oak_functions/examples/abitest/common/src/: lib.rs
oak_functions/examples/abitest/module/: Cargo.toml
oak_functions/examples/abitest/module/src/: lib.rs
scripts/: build_example  build_server_asylo  build_server_dev
toolchain/: BUILD  emar.sh  emcc.sh  emcc_toolchain_config.bzl
