[package]
name = "ml_transparency_signer"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
clap = { version = "*", features = ["derive"] }
hex = { version = "*", default-features = false }
oak_attestation_verification = { workspace = true, features = ["std"] }
oak_crypto = { workspace = true }
oak_proto_rust = { workspace = true }
prost = { workspace = true }
p256 = { version = "*", default-features = false, features = [
  "ecdsa",
  "alloc",
] }
rand = "*"
